[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "expline"
version = "0.1.1"
description = "Minimal executable MVP for experiment lineage recording"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
expline = "expline.cli:main"

[tool.setuptools]
packages = ["expline"]
